Refactor event and subscription models to support start and end dates; update related DTOs, services, and tests
- Updated Subscription model to implement custom equals and hashCode methods.
- Refactored Event model to include startDateTime and endDateTime instead of a single date field.
- Modified EventRequestDTO and EventResponseDTO to reflect the new date structure.
- Adjusted EventService to handle new date parameters.
- Updated GlobalExceptionHandler to log additional details for exceptions.
- Created database migration script to rename and add new columns for event dates.
- Enhanced unit tests for Event and Subscription models to validate new date logic.
- Updated repository queries to use startDateTime for upcoming events.
- Refactored controller tests to accommodate changes in EventRequestDTO and EventResponseDTO.